examples/invalid/004_duplicate_models.jd
/*********************************
 * jPipe  -  Reference Examples  * 
 * @author   Sebastien Mosser    *
 * @compiler 2.x                 *
 *********************************/

// A minimal justification: evidence -> strategy -> conclusion
justification minimal {
    conclusion c1 is "A conclusion"
    strategy   s1 is "A strategy"
    evidence   e1 is "An evidence"

    s1 supports c1
    e1 supports s1
}

// A minimal justification: evidence -> strategy -> conclusion
justification minimal {
    conclusion c is "A conclusion"
    strategy   s is "A strategy"
    evidence   e is "An evidence"

    s supports c
    e supports s
}
